--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -5,22 +5,22 @@
     <item
         android:id="@+id/action_one"
         android:icon="@mipmap/calendar"
-        android:title="Item One"
+        android:title="Calendar"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_two"
         android:icon="@mipmap/night_mode"
-        android:title="Item Two"
+        android:title="Night Mode"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_three"
         android:icon="@mipmap/notification_bell"
-        android:title="Item Three"
+        android:title="Notifications"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_four"
         android:icon="@mipmap/add_event"
-        android:title="Item Four"
+        android:title="Add Event"
         app:showAsAction="ifRoom" />
 
 
