--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,16 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#8558BC</color>
-    <color name="colorPrimaryDark">#8558BC</color>
+    <color name="colorPrimary">#0E154C</color>
+    <color name="colorPrimaryDark">#0E154C</color>
     <color name="colorAccent">#03DAC5</color>
-
-    <color name="defaultLightBackgroundColor">#EFEEEE</color>
-    <color name="defaultBorderColor">#32FFFFFF</color>
-    <color name="defaultDarkShadowColor">#80D1CDC7</color>
-    <color name="defaultLightShadowColor">#80FFFFFF</color>
-    <color name="defaultTextColor">#131313</color>
-    <color name="defaultIconColor">#d62828</color>
-    <color name="defaultMinHourHandsColor">#003049</color>
-    <color name="defaultSecondsHandsColor">#d62828</color>
 
 </resources>
