--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Theme.ReminderAssistant" parent="Theme.MaterialComponents.Light.DarkActionBar">
+    <style name="Theme.ReminderAssistant" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name ="colorPrimary">@color/colorPrimary</item>
         <item name ="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name ="colorAccent">@color/colorAccent</item>
