--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,27 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
+<menu xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_one"
-        android:icon="@mipmap/calendar"
-        android:title="Calendar"
-        app:showAsAction="ifRoom" />
+        android:id="@+id/actionCalendar"
+        android:icon="@drawable/ic_baseline_date_range_24"
+        android:title="@string/calendar"
+        app:showAsAction="always"
+        tools:ignore="AlwaysShowAction" />
     <item
-        android:id="@+id/action_two"
-        android:icon="@mipmap/night_mode"
-        android:title="Night Mode"
-        app:showAsAction="ifRoom" />
+        android:id="@+id/actionNightMode"
+        android:icon="@drawable/ic_baseline_dark_mode_24"
+        android:title="@string/night_mode"
+        app:showAsAction="always" />
     <item
-        android:id="@+id/action_three"
-        android:icon="@mipmap/notification_bell"
-        android:title="Notifications"
-        app:showAsAction="ifRoom" />
+        android:id="@+id/actionNotifications"
+        android:icon="@drawable/ic_baseline_notifications_none_24"
+        android:title="@string/notification"
+        app:showAsAction="always" />
     <item
-        android:id="@+id/action_four"
-        android:icon="@mipmap/add_event"
-        android:title="Add Event"
-        app:showAsAction="ifRoom" />
+        android:id="@+id/actionAddEvent"
+        android:icon="@drawable/ic_baseline_add_24"
+        android:title="@string/add_event"
+        app:showAsAction="always" />
 
 
 </menu>
