--- a/app/src/main/res/layout/recycler_view_row.xml
+++ b/app/src/main/res/layout/recycler_view_row.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="4dp">
@@ -16,15 +16,16 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginEnd="8dp"
+            android:contentDescription="@string/background_for_times"
             android:src="@drawable/ic_baseline_folder_24" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_alignLeft="@+id/imageView"
+            android:layout_alignStart="@+id/imageView"
             android:layout_alignTop="@+id/imageView"
-            android:layout_alignRight="@+id/imageView"
+            android:layout_alignEnd="@+id/imageView"
             android:layout_alignBottom="@+id/imageView"
             android:gravity="center">
 
@@ -33,18 +34,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="12:00"
+                android:text="@string/_12_00"
                 android:textColor="#000000"
-                android:textSize="10sp" />
+                android:textSize="12sp" />
 
             <TextView
                 android:id="@+id/imageTextDown"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:text="12:00"
+                android:text="@string/_12_00"
                 android:textColor="#000000"
-                android:textSize="10sp" />
+                android:textSize="12sp" />
         </LinearLayout>
 
         <TextView
@@ -52,7 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/imageView"
-            android:text="Line 1"
+            android:text="@string/line_1"
             android:textColor="@android:color/black"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -63,7 +64,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/textView1"
             android:layout_toEndOf="@id/imageView"
-            android:text="Line 2" />
+            android:text="@string/line_2" />
 
         <ImageButton
             android:id="@+id/popupMenuButton"
@@ -72,6 +73,7 @@
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="15dp"
             android:background="#FFFFFF"
+            android:contentDescription="@string/more_menu"
             app:srcCompat="@drawable/ic_baseline_more_vert_24" />
 
 
