add event page created

--- a/app/src/main/res/menu/popup_menu.xml
+++ b/app/src/main/res/menu/popup_menu.xml
@@ -3,8 +3,8 @@
 
     <item
         android:id="@+id/actionPopupEdit"
-        android:title="Edit" />
+        android:title="@string/edit" />
     <item
         android:id="@+id/actionPopupDelete"
-        android:title="Delete" />
+        android:title="@string/delete" />
 </menu>
