crash fixed on night mode

--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -24,7 +24,7 @@
                 android:id="@+id/courseNameText"
                 android:layout_width="93dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="17dp"
+                android:layout_marginStart="18dp"
                 android:layout_marginTop="10dp"
                 android:text="@string/course_name"
                 android:textColor="@android:color/secondary_text_light" />
@@ -34,6 +34,7 @@
                 android:layout_width="363dp"
                 android:layout_height="36dp"
                 android:layout_marginLeft="17dp"
+                android:layout_marginTop="3dp"
                 android:layout_marginRight="17dp"
                 android:background="@drawable/edit__text_design"
                 android:hint="@string/enter_the_course_name"
@@ -48,7 +49,7 @@
                 android:id="@+id/classNameText"
                 android:layout_width="93dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="17dp"
+                android:layout_marginStart="18dp"
                 android:layout_marginTop="10dp"
                 android:text="@string/class_name"
                 android:textColor="@android:color/secondary_text_light" />
@@ -58,6 +59,7 @@
                 android:layout_width="363dp"
                 android:layout_height="36dp"
                 android:layout_marginLeft="17dp"
+                android:layout_marginTop="3dp"
                 android:layout_marginRight="17dp"
                 android:background="@drawable/edit__text_design"
                 android:hint="@string/enter_the_name_of_the_class"
@@ -78,7 +80,7 @@
                 android:id="@+id/startTimeText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="17dp"
+                android:layout_marginStart="18dp"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:text="@string/start_time"
