--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,5 +1,7 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Theme.ReminderAssistant" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+<resources>
+    <style name="Theme.ReminderAssistant" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name ="colorPrimary">@color/colorPrimary</item>
+        <item name ="colorPrimaryDark">@color/colorPrimary</item>
+        <item name ="colorAccent">@color/colorAccent</item>
     </style>
 </resources>
