colors are compatible with dark mode now!

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,4 @@
 <resources>
-    <style name="Theme.ReminderAssistant" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <item name ="colorPrimary">@color/colorPrimary</item>
-        <item name ="colorPrimaryDark">@color/colorPrimary</item>
-        <item name ="colorAccent">@color/colorAccent</item>
+    <style name="Theme.ReminderAssistant" parent="Theme.MaterialComponents.DayNight">
     </style>
 </resources>
