--- a/app/src/main/res/drawable/edit__text_design.xml
+++ b/app/src/main/res/drawable/edit__text_design.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#CCCCCC" />
+    <solid android:color="@color/editTextDesignColor" />
     <corners
         android:bottomRightRadius="6dp"
         android:bottomLeftRadius="6dp"
