--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -27,7 +27,7 @@
                 android:layout_marginStart="18dp"
                 android:layout_marginTop="10dp"
                 android:text="@string/course_name"
-                android:textColor="@android:color/secondary_text_light" />
+                android:textColor="@color/addEventTextColor" />
 
             <EditText
                 android:id="@+id/courseNameInput"
@@ -42,7 +42,8 @@
                 android:inputType="textNoSuggestions"
                 android:paddingStart="5dp"
                 android:paddingEnd="5dp"
-                android:textColorHighlight="?android:attr/textColorHighlight"
+                android:textColor="@color/addEventTextHintColor"
+                android:textColorHint="@color/addEventTextHintColor"
                 android:textColorLink="@color/colorAccent" />
 
             <TextView
@@ -52,7 +53,7 @@
                 android:layout_marginStart="18dp"
                 android:layout_marginTop="10dp"
                 android:text="@string/class_name"
-                android:textColor="@android:color/secondary_text_light" />
+                android:textColor="@color/addEventTextColor" />
 
             <EditText
                 android:id="@+id/classNameInput"
@@ -66,7 +67,10 @@
                 android:importantForAutofill="no"
                 android:inputType="textNoSuggestions"
                 android:paddingStart="5dp"
-                android:paddingEnd="5dp" />
+                android:paddingEnd="5dp"
+                android:textColor="@color/addEventTextHintColor"
+                android:textColorHint="@color/addEventTextHintColor"
+                android:textColorLink="@color/colorAccent" />
 
         </LinearLayout>
 
@@ -84,7 +88,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:text="@string/start_time"
-                android:textColor="@android:color/secondary_text_light" />
+                android:textColor="@color/addEventTextColor" />
 
             <TextView
                 android:layout_width="32dp"
@@ -93,7 +97,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:text="@string/finish_time"
-                android:textColor="@android:color/secondary_text_light" />
+                android:textColor="@color/addEventTextColor" />
         </LinearLayout>
 
     </LinearLayout>
@@ -112,7 +116,7 @@
             android:layout_width="150dp"
             android:layout_height="62dp"
             android:layout_marginStart="17dp"
-            android:backgroundTint="#CCCCCC"
+            android:backgroundTint="@color/editTextDesignColor"
             android:onClick="startTime"
             android:text="@string/time_button_default_text" />
 
@@ -127,7 +131,7 @@
             android:layout_width="150dp"
             android:layout_height="62dp"
             android:layout_marginEnd="17dp"
-            android:backgroundTint="#CCCCCC"
+            android:backgroundTint="@color/editTextDesignColor"
             android:onClick="finishTime"
             android:text="@string/time_button_default_text" />
 
