--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,15 @@
     <color name="colorPrimaryDark">#F2F3F4</color>
     <color name="colorAccent">#03DAC5</color>
 
+    <color name="white">#FFFFFF</color>
+    <color name="yellow">#FFFF00</color>
+    <color name="fuchsia">#FF00FF</color>
+    <color name="red">#FF0000</color>
+    <color name="silver">#C0C0C0</color>
+    <color name="black">#000000</color>
+    <color name="afwhite">#F2F3F4</color>
+    <color name="addEventTextColor">@color/black</color>
+    <color name="addEventTextHintColor">#3C3B3B</color>
+    <color name="editTextDesignColor">@color/silver</color>
+
 </resources>
