--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,6 @@
     <color name="addEventTextColor">@color/black</color>
     <color name="addEventTextHintColor">#717070</color>
     <color name="editTextDesignColor">@color/silver</color>
+    <color name="moreButtonBackground">@color/white</color>
 
 </resources>
