--- a/app/src/main/res/layout/recycler_view_row.xml
+++ b/app/src/main/res/layout/recycler_view_row.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp">
+    android:layout_margin="4dp"
+    android:onClick="deneme">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -22,12 +22,12 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_alignStart="@+id/imageView"
             android:layout_alignTop="@+id/imageView"
             android:layout_alignEnd="@+id/imageView"
             android:layout_alignBottom="@+id/imageView"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/imageTextUp"
@@ -72,7 +72,7 @@
             android:layout_height="46dp"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="15dp"
-            android:background="#FFFFFF"
+            android:background="@color/moreButtonBackground"
             android:contentDescription="@string/more_menu"
             app:srcCompat="@drawable/ic_baseline_more_vert_24" />
 
