--- a/app/src/main/res/layout/recycler_view_row.xml
+++ b/app/src/main/res/layout/recycler_view_row.xml
@@ -6,8 +6,10 @@
     android:layout_margin="4dp">
 
     <RelativeLayout
+        android:id="@+id/relativeLayoutEdit"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:onClick="updateItem"
         android:padding="8dp">
 
         <ImageView
