--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,21 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/actionCalendar"
-        android:icon="@drawable/ic_baseline_date_range_24"
-        android:title="@string/calendar"
-        app:showAsAction="always"
-        tools:ignore="AlwaysShowAction" />
-    <item
         android:id="@+id/actionNightMode"
         android:icon="@drawable/ic_baseline_dark_mode_24"
         android:title="@string/night_mode"
-        app:showAsAction="always" />
-    <item
-        android:id="@+id/actionNotifications"
-        android:icon="@drawable/ic_baseline_notifications_none_24"
-        android:title="@string/notification"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/actionAddEvent"
         android:icon="@drawable/ic_baseline_add_24"
