--- a/app/src/main/res/layout/recycler_view_row.xml
+++ b/app/src/main/res/layout/recycler_view_row.xml
@@ -7,26 +7,41 @@
 
     <RelativeLayout
         android:id="@+id/relativeLayoutEdit"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:padding="8dp">
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginEnd="8dp"
-            android:contentDescription="@string/background_for_times"
-            android:src="@drawable/ic_baseline_folder_24" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/imageView"
-            android:layout_alignTop="@+id/imageView"
-            android:layout_alignEnd="@+id/imageView"
-            android:layout_alignBottom="@+id/imageView"
-            android:gravity="center"
+            android:layout_marginStart="10dp"
+            android:layout_toEndOf="@id/linearLayout"
+            android:orientation="vertical">
+
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/line_1"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/cardview_default_elevation"
+
+                android:layout_marginBottom="1dp"
+                android:text="@string/line_2" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
@@ -35,8 +50,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/_12_00"
-                android:textColor="#000000"
-                android:textSize="12sp" />
+                android:textColor="@color/customIconColor"
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/imageTextDown"
@@ -44,36 +59,18 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
                 android:text="@string/_12_00"
-                android:textColor="#000000"
-                android:textSize="12sp" />
+                android:textColor="@color/customIconColor"
+                android:textSize="18sp" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/imageView"
-            android:text="@string/line_1"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/textView1"
-            android:layout_toEndOf="@id/imageView"
-            android:text="@string/line_2" />
-
         <ImageButton
-            android:id="@+id/popupMenuButton"
+            android:id="@+id/deleteItemButton"
             android:layout_width="48dp"
             android:layout_height="46dp"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="15dp"
-            android:background="@color/moreButtonBackground"
+            android:background="@color/deleteButtonBackground"
             android:contentDescription="@string/more_menu"
+            android:foregroundGravity="center_vertical"
             app:srcCompat="@drawable/ic_baseline_delete_24" />
 
 
