--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,6 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/actionTable"
+        android:icon="@drawable/ic_baseline_date_range_24"
+        android:title="@string/table"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/actionNightMode"
         android:icon="@drawable/ic_baseline_dark_mode_24"
         android:title="@string/night_mode"
