--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,4 +1,8 @@
 <resources>
     <style name="Theme.ReminderAssistant" parent="Theme.MaterialComponents.DayNight">
+
+
     </style>
+    <color name="customBackgroundColor">#000000</color>
+    <color name="customAppNameColor">#9e9e9e</color>
 </resources>
