--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#D62727</color>
+    <color name="colorPrimary">#FF5071</color>
     <color name="colorPrimaryDark">#F2F3F4</color>
     <color name="colorAccent">#03DAC5</color>
 
@@ -14,6 +14,8 @@
     <color name="addEventTextColor">@color/black</color>
     <color name="addEventTextHintColor">#717070</color>
     <color name="editTextDesignColor">@color/silver</color>
-    <color name="moreButtonBackground">@color/white</color>
+    <color name="deleteButtonBackground">@color/white</color>
+
+
 
 </resources>
