--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,13 @@
 <resources>
     <style name="Theme.ReminderAssistant" parent="Theme.MaterialComponents.DayNight">
+        <item name="colorPrimary">#c5e1a5</item>
+        <item name="colorPrimaryDark">#94af76</item>
+
+
     </style>
+    <color name="customBackgroundColor">#eff1f7</color>
+    <color name="customIconColor">#2E2E2E</color>
+    <color name="customFolderColor">#474747</color>
+    <color name="customTimeTextColor">#FFFFFF</color>
+    <color name="customAppNameColor">#2e2e2e</color>
 </resources>
