--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,6 +8,6 @@
     <color name="customBackgroundColor">#eff1f7</color>
     <color name="customIconColor">#2E2E2E</color>
     <color name="customFolderColor">#474747</color>
-    <color name="customTimeTextColor">#FFFFFF</color>
+    <color name="customTimeTextColor">#000000</color>
     <color name="customAppNameColor">#2e2e2e</color>
 </resources>
